codepkg/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Action_provide_protection_from_hazards__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>How will action provide protection from future natural hazards?</inlineHelpText>
        <label>Action provide protection from hazards</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Location_Latitude__c</fullName>
        <formula>TEXT(FLOOR( Activity_Location__Latitude__s ))+ &quot;.&quot; + RIGHT( TEXT((1 + Activity_Location__Latitude__s - FLOOR( Activity_Location__Latitude__s ) ) * 1000000 ), 6 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provide the Latitude (Example, 32.306421) for at least one point at the activity location.</inlineHelpText>
        <label>Activity Location Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Location_Longitude__c</fullName>
        <formula>TEXT(FLOOR( Activity_Location__Longitude__s ))+ &quot;.&quot; + RIGHT( TEXT(((-1) + Activity_Location__Longitude__s + FLOOR( Activity_Location__Longitude__s ) ) * 1000000 ), 6 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provide the Longitude (Example, -122.614581) for at least one point at the activity location.</inlineHelpText>
        <label>Activity Location Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Location__c</fullName>
        <inlineHelpText>Provide the Latitude/Longitude (Example, 32.30642, -122.61458) for the specific activity location. If the activity covers a wide area or multiple project sites, provide a polygon of the area.</inlineHelpText>
        <label>Activity Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Applicable_Hazard_Mitigation_pan_Expiry__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>what is the expiration date of the Applicable Hazard Mitigation pan?</inlineHelpText>
        <label>Applicable Hazard Mitigation pan Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Assembly_District__c</fullName>
        <label>Applicant Assembly District</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Senate_District__c</fullName>
        <label>Applicant Senate District</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_US_Congressional_District__c</fullName>
        <label>Applicant US Congressional District</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <inlineHelpText>Planning activities include developing a new Hazard Mitigation Plan or updating a current plan.</inlineHelpText>
        <label>Subapplication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Planning-related</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Advance Assistance</fullName>
                </value>
                <value>
                    <fullName>5% Initiative</fullName>
                </value>
                <value>
                    <fullName>Flood Hazard Mitigation Planning</fullName>
                </value>
                <value>
                    <fullName>Project Scoping</fullName>
                </value>
                <value>
                    <fullName>Community Flood Mitigation Project</fullName>
                </value>
                <value>
                    <fullName>Individual Flood Mitigation Project</fullName>
                </value>
                <value>
                    <fullName>Capability and Capacity Building (C&amp;CB)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brief_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Complete the response in the format provided. For example, This flood mitigation project will reduce or prevent localized flooding of 25 houses in a North Sacramento subdivision characterized by an average of two inches of rain.</inlineHelpText>
        <label>Brief Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Child_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications (Child Application)</relationshipLabel>
        <relationshipName>Child_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If you do not know your DUNS #, call Dun &amp; Bradstreet (D&amp;B) at 1-866-705-5711 for the information.</inlineHelpText>
        <label>DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_area_and_population_impacted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe area and population impacted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_hazard_and_its_impact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe hazard and its impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_how_why_eligible_per_guidance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Describe how/why eligible per guidance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_problem_to_be_mitigated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide a detailed description of the problem or the risk to be addressed. Include the cause of the problem, how long the problem has existed, the types of damages that occur (including dates and approx. costs), and any studies that have been performed</inlineHelpText>
        <label>Describe the problem to be mitigated</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disaster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Disaster</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_another_Fed_entity_have_authority__c</fullName>
        <label>Does another Fed entity have authority?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EIN_For_Private_Non_Profits__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Employer Identification Number (EIN) is a federal nine-digit tax number that IRS assigns to non-profits, charities, organizations, and businesses in the following format: XX-XXXXXXX.</inlineHelpText>
        <label>EIN (For Private Non-Profits)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FIPS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funded_previously_under_a_Fed_program__c</fullName>
        <label>Funded previously under a Fed program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_subapp_been_submitte_to_OES_before__c</fullName>
        <label>Has subapp been submitte to OES before?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hazard__c</fullName>
        <label>Hazard</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Project_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Drought</fullName>
                </value>
                <value>
                    <fullName>Dam/Levee Break</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>Flood</fullName>
                </value>
                <value>
                    <fullName>Hurricane</fullName>
                </value>
                <value>
                    <fullName>Mud/Landslide</fullName>
                </value>
                <value>
                    <fullName>Sea Level Rise</fullName>
                </value>
                <value>
                    <fullName>Winter Storm</fullName>
                </value>
                <value>
                    <fullName>Tornado</fullName>
                </value>
                <value>
                    <fullName>Tsunami</fullName>
                </value>
                <value>
                    <fullName>Windstorm</fullName>
                </value>
                <value>
                    <fullName>Multi Hazard</fullName>
                </value>
                <value>
                    <fullName>Multi-Hazard (Generator Only)</fullName>
                </value>
                <value>
                    <fullName>Heat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_project_complies_with_SHMP__c</fullName>
        <label>How project complies with SHMP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_SFHA_are_NFIP_requirments_addressed__c</fullName>
        <label>If SFHA, are NFIP requirments addressed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_yes_identify_the_program__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, identify the program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Any_Open_RFI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is checked if we have any RFI Open on application.</description>
        <label>RFI Pending?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_BCR_verified_at_1_0_or_greater__c</fullName>
        <label>Is BCR verified at 1.0 or greater?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_project_in_Special_Flood_Hazard_Area__c</fullName>
        <label>Is project in Special Flood Hazard Area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_an_eligible_Activity__c</fullName>
        <label>Is this an eligible Activity?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_an_eligible_Subapplicant__c</fullName>
        <label>Is this an eligible Subapplicant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_project_phased__c</fullName>
        <inlineHelpText>Is this project phased?</inlineHelpText>
        <label>Is this project phased?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Hazard_Mitigation_Plan_Status__c</fullName>
        <inlineHelpText>Local Hazard Mitigation Plan Status</inlineHelpText>
        <label>Local Hazard Mitigation Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>In OES Review</fullName>
                </value>
                <value>
                    <fullName>In FEMA Review</fullName>
                </value>
                <value>
                    <fullName>Pending Adoption</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maintenance_Letter__c</fullName>
        <label>Maintenance Letter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName +&quot; &quot;+ Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Letter__c</fullName>
        <label>Match Letter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NFIP_parcticipation__c</fullName>
        <label>NFIP parcticipation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_title_of_the_plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>what is name / title of the plan</inlineHelpText>
        <label>Name/title of the plan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>No Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Project_Sites__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of Project Sites</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_people_Protect_Impacted_by_action__c</fullName>
        <inlineHelpText>Number of People Protected/Impacted by this Mitigation Action</inlineHelpText>
        <label>No of people Protect/Impacted by action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Federal_Share_Match_Availability__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Non-Federal Share (Match) Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OES_Analyst_Brief_Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OES Analyst Brief Summary</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Parent_Application</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_1_Deliverables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List the deliverables for phase 1 of proposed project.</inlineHelpText>
        <label>Phase 1 Deliverables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phase_2_Deliverables__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List the deliverables for phase 2 of proposed project.</inlineHelpText>
        <label>Phase 2 Deliverables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Physical_project_work_already_started__c</fullName>
        <inlineHelpText>Physical work includes ground-breaking, demolition, construction, and/or
geotechnical work that involves ground disturbance including soil boring?</inlineHelpText>
        <label>Physical project work already started?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>Pre_Application__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>For example, DR4407-PJ0001</inlineHelpText>
        <label>Project Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Duration_in_Months__c</fullName>
        <inlineHelpText>Indicate the number of months it will take for this mitigation action to be implemented. Cannot exceed 36 months (33 months implementation plus 3 months for closeout)</inlineHelpText>
        <label>Project / Plan Duration (in Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The project/plan title must include the subapplicant name and subapplication type or project type. Do not use abbreviations in the title. For example, Marin County Marin Center Exhibit Hall - Seismic Retrofit Project, City of Los Angeles Stormwater Analys</inlineHelpText>
        <label>Project / Plan Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>